--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ a:hover {
 .white{
     display: flex;
     flex-direction: column;
-    font-size: 16px;
+    font-size: 18px;
 }
 .white a{
     font-size: 20px;
@@ -721,7 +721,7 @@ h6,
 p,
 label,
 .btn,
-a {
+a{
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
@@ -894,7 +894,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 /************************correction*******************/
@@ -1021,6 +1021,7 @@ width: auto;
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
     }
+    
 }
 
 @media (max-width: 767px) {
@@ -1187,6 +1188,8 @@ width: auto;
     .bloc-mob-center-text {
         text-align: center;
     }
+
+    
 }
 
 @media (max-width: 425px) {
@@ -1231,16 +1234,28 @@ width: auto;
     .keywords{
         margin: 15px;
         text-align: center;
+        max-width: 330px;
     }
-
+    .text-keywords{
+        font-size: 16px;
+        max-width: 330px;
+    }
     .col-sm-12 > .white{
         font-size: 15px;
     }
-     .row > .list-footer{
-        margin-left: 30px;
-        display: block;
+     
+    .list-row-footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
+    .list-footer ul{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
     /************************contact**************************/
     .col-sm-12 > .titre-principale-contact{
         font-size: 30px;
@@ -1281,6 +1296,13 @@ width: auto;
         border-radius: 20px;
     }
 
+    .image-3{
+        
+        width: 100%;
+    }
+    .image-4{
+        width: 100%;
+    }
     
 }
 
@@ -1297,6 +1319,13 @@ width: auto;
         text-decoration: none;
         padding: 0 10px;
         font-size: 14px;
+    }
+
+    
+    .list-footer ul{
+        margin: 0;
+        padding: 0;
+        list-style: none;
     }
 }
 
@@ -1406,3 +1435,5 @@ form button{
     font-size: 14px;
     max-width: 350px;
 }
+
+
