--- a/style.css
+++ b/style.css
@@ -894,7 +894,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.jpg");
+    background-image: url("img/image-de-presentation.webp");
 }
 
 /************************correction*******************/
