--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,13 @@ a:hover {
     margin: 0px;
 }
 .title-agence{
-    font-size: 22px;
+    font-size: 18px;
     text-align: center;
-    max-width: 620px;
-    font-weight:500;
+    max-width: 650px;
+    font-weight:400;
     margin-bottom: 30px;
+    font-family: "helvetica";
+    color: #575757;
 }
 .text-center{
     font-size: 14px;
@@ -67,12 +69,12 @@ a:hover {
 }
 
 .second-titre{
-    font-size: 20px;
+    font-size: 16px;
     font-style: italic;
     text-align: center;
-    max-width: 550px;
+    max-width: 575px;
     font-weight:500;
-   
+    color: #575757;
 }
 .titre-span{
     font-size: 20px;
@@ -1213,11 +1215,11 @@ width: auto;
         margin: 0px;
     }
     .title-agence{
-        font-size: 20px;
+        font-size: 18px;
         max-width: 350px;
     }
     .second-titre{
-        font-size: 18px;
+        font-size: 16px;
         max-width: 350px;
     }
     .titre-span{
